--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
+        <!-- Add the logo image -->
+        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="site-logo" />
         <h1 class="site-title">Smart Product Advisor</h1>
       </header>
 
